<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Beacon Transmitter</string>
    <string name="ibeacon_logo">Beacon Logo</string>

    <string name="hint_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_uuid">Create uuid</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="error_not_found_user">Could not find a user with this email.</string>
    <string name="error_bad_request">Email or Password are incorrect.</string>
    <string name="error_conflict">User with this email has been created.</string>
    <string name="error_unexpected">Ops! Unexpected error.</string>
    <string name="ok">OK</string>

    <!--Toolbar-->
    <string name="not_title_set" />
    <string name="title_register_fragment">Registration</string>
    <string name="flag_remember_me">Remember me</string>
    <string name="progress_dialog_msg">Loading…</string>
    <string name="dialog_no_ble_broadcast_title">Bluetooth Low Energy advertising unavailable</string>
    <string name="dialog_no_ble_broadcast_msg">Unfortunately, your device does not support BLE multi broadcast.
        You cannot use the simulation feature.</string>

    <string name="title_beacon_configuration">Beacon configuration</string>
    <string name="hint_uuid">UUID</string>
    <string name="hint_major">Major</string>
    <string name="hint_minor">Minor</string>
    <string name="default_uuid" tools:ignore="TypographyDashes">11111111-2222–3333-4444-555555555555</string>
    <string name="default_major">111</string>
    <string name="default_minor">222</string>
    <string name="title_beacon_templates">Beacon templates</string>
    <string name="check_box_ibeacon">Ibeacon</string>
    <string name="check_box_altbeacon">AltBeacon</string>
    <string name="menu_main">menu</string>
    <string name="menu_main_about">About</string>
    <string name="menu_main_logout">Logout</string>

</resources>
