<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/transmitter.cnf.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/icons"
                android:elevation="6dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/title_beacon_configuration"
                        android:textStyle="italic" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/transmitter.uuid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_uuid"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@string/default_uuid" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/transmitter.major"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_major"
                                android:inputType="number"
                                android:maxLines="1"
                                android:text="@string/default_major" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/transmitter.minor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_minor"
                                android:inputType="number"
                                android:maxLines="1"
                                android:text="@string/default_minor" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/title_beacon_templates"
                        android:textStyle="italic" />

                    <CheckBox
                        android:id="@+id/transmitter.altbeacon.flag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/check_box_altbeacon" />

                    <CheckBox
                        android:id="@+id/transmitter.ibeacon.flag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_box_ibeacon" />

                    <Button
                        android:id="@+id/transmitter.btn.uuid"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/button_height"
                        android:text="@string/action_create_uuid" />

                </LinearLayout>
            </FrameLayout>
        </ScrollView>
    </LinearLayout>

</merge>