<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/login.form"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/login.container"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login.logo"
                    android:layout_gravity="center"
                    android:layout_height="100dp"
                    android:layout_width="100dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_logo_radar" />

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <EditText
                        android:hint="@string/hint_email"
                        android:id="@+id/login.email.box"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <EditText
                        android:hint="@string/hint_password"
                        android:id="@+id/login.password.box"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/login.remember"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/flag_remember_me"/>

                <LinearLayout
                    android:id="@+id/login.btn.container"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:weightSum="2">

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/login.btn.register"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/action_register"
                        android:textStyle="bold" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/login.btn.signin"
                        android:layout_height="@dimen/button_height"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</merge>