<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:id="@+id/register.form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/register.container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/register.logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/ic_logo_radar" />

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                <EditText
                    android:hint="@string/hint_name"
                    android:id="@+id/register.username.box"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <EditText
                        android:hint="@string/hint_email"
                        android:id="@+id/register.email.box"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <EditText
                        android:hint="@string/hint_password"
                        android:id="@+id/register.password.box"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/register.btn.action"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_height="@dimen/button_height"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/action_register"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</merge>